samples/_failures_safe/1761799929_457166_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a119a770.c: In function ‘main’:
./samples/SAFE/__tmp_a119a770.c:162:16: error: expected ‘;’ at end of input
  162 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_a119a770.c:162:9: error: expected declaration or statement at end of input
  162 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_a119a770.c:162:9: error: expected declaration or statement at end of input
